2020xxxx - Gnoga V1.6-beta:

- xxx


20191222 - Gnoga V1.6-alpha:

- Upgrade to PIXI 5.3.0.
- Upgrade to ACE 1.4.12.
- Upgrade to Simple Components 4.50.
- Update Jeff Carter's Pragmarc from Github.
- Gnoga: adaptation to GNAT Community 2020.
- JQuery Javascript source upgrade version 3.5.0.
- Add experimental package UXStrings (see readme).
- Demo: add a simple localization tool (Localize) to help edition of localization files.
- Form: add additional support for file input with multiple files. Change some API.
- Add support for files upload (implementing Javascript FileReader).
- Form: add support for file and tel field types. Fix UTF8 character conversions in form names.


20191222 - Gnoga V1.5a:

- Update Makefile, TODO, README, TIPS and more.


20191111 - Gnoga V1.5-beta:

- Avoid some memory leaks.
- Fix exception in CLI test
- Check only specifications with AdaControl.


20190824 - Gnoga V1.5-alpha:

- Fix to avoid SYSTEM.ASSERTIONS.ASSERT_FAILURE : Position cursor of Next is bad
- Add support for localhost in Initialize for singleton and multi-connect app according to code comments.
- Upgrade to Simple Components 4.41
- Update Jeff Carter's Pragmarc and demos from Github
- Upgrade to Simple Components 4.40
- Canvas: add additional binding to drawImage
- PIXI.Sprite: recursive rendering of sprite's children.
- PIXI.Sprite: modification for finalizing children
- Add log of user agent and platform client browser in case of suspicious connections
- Make favicon customization available by the application.
- Add an exception handler when a requested file is non existent on the server side
- Support multi-part bodies for POST forms
- Add Profile build mode and tidy some GPR project files.
- Fix POST UTF-8 key, UTF-8 to Latin-1 translation, UTF8 incoming message.
- Console_IO: improve responsiveness of Get_Line
- Canvas_2D: add Polygon_To; Plotting_2D: use Polygon_To


20181013 - Gnoga V1.4a:

- Update TODO, HISTORY.


20180816 - Gnoga V1.4-beta:
