@@ -71,7 +71,7 @@ abstract project Settings is
    --------------------
 
    package Pretty_Printer is
-      for Default_Switches ("Ada") use ("-M120", "-W8", "--par_threshold=1");
+      for Default_Switches ("Ada") use ("-M120", "-W8", "--par_threshold=1", "--comments-unchanged");
    end Pretty_Printer;
 
    -------------
