@@ -1,3 +1,8 @@
+20201128 - Gnoga V2.1-alpha:
+
+- ...
+
+
 2020xxxx - Gnoga V1.6-beta:
 
 - xxx
